test/runtime/fail/expr/missing_terminator.hy

// expect error: Expected `\)` to close `\(` in expression, found `if`

let b = 3
let a = (3 * (b + 4)

if b == 3 {
	// ...
}
